--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,14 @@
     --gray: #4c4c4c;
     --white: #ffffff;
 }
-
+* {
+    box-sizing: border-box;
+}
 body {
     font-family: "Montserrat", sans-serif;
     background-color: var(--white-2);
     color: var(--main-cl);
-    overflow-x: hidden;
+    font-size: 14px;
 }
 h1,
 h2,
@@ -28,6 +30,7 @@ h5,
 h6 {
     margin: 0;
     padding: 0;
+    font-weight: 600;
 }
 p {
     margin: 0;
@@ -43,6 +46,9 @@ img {
     display: block;
     width: 100%;
     height: auto;
+}
+button {
+    font-weight: 600;
 }
 a,
 input,
@@ -62,7 +68,7 @@ a {
 /** ---------------------------------------- */
 
 .container {
-    width: 1166px;
+    max-width: 1166px;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -70,7 +76,6 @@ a {
     color: #111;
     text-align: center;
     font-size: 24px;
-    font-weight: 600;
     line-height: 1.17;
     letter-spacing: -0.03em;
     text-transform: uppercase;
@@ -94,7 +99,99 @@ a {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-
+.menu-list {
+    display: flex;
+    gap: 24px;
+}
+.menu-item-link {
+    display: block;
+    padding: 24px 0;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: -0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer .menu-item-link {
+    padding: 18px 0;
+    color: var(--white);
+}
+.social-list {
+    display: flex;
+    gap: 14px;
+}
+.social-item-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    border: 1px solid rgba(17, 17, 17, 0.1);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-social {
+    margin: 8px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer .social-item-link {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.footer .icon-social {
+    fill: var(--white);
+}
+.menu-item-link:hover,
+.menu-item-link:focus,
+.contact-item-link:hover,
+.contact-item-link:focus {
+    color: var(--accent-cl);
+}
+.social-item-link:hover,
+.social-item-link:focus {
+    border: 1px solid rgba(253, 146, 34, 0.1);
+}
+.social-item-link:hover .icon-social,
+.social-item-link:focus .icon-social {
+    fill: var(--accent-cl);
+}
+.section {
+    padding-bottom: 120px;
+}
+.subtitle-white {
+    color: var(--white);
+    font-weight: 500;
+    line-height: 1.29;
+}
+.btn-hero {
+    border-radius: 100px;
+    background-color: transparent;
+    padding: 14px 40px;
+    border: 1px solid var(--white);
+    color: var(--white);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-hero:focus,
+.btn-hero:hover {
+    border-color: var(--accent-cl);
+    color: var(--accent-cl);
+}
+.btn-orange {
+    background-color: var(--accent-cl);
+    border: none;
+}
+.btn-orange:focus,
+.btn-orange:hover {
+    background-color: var(--beige);
+    border: none;
+}
+.header-three {
+    color: var(--white);
+    font-size: 18px;
+}
+.p-style {
+    color: var(--white);
+    line-height: 1.29;
+    letter-spacing: -0.02em;
+}
 /** ---------------------------------------- */
 
 /** ------------HEADER------------ */
@@ -126,35 +223,6 @@ a {
 .icon-logo {
     margin-left: 4px;
 }
-.menu-list {
-    display: flex;
-    gap: 24px;
-}
-.menu-item-link {
-    display: block;
-    padding: 24px 0;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: -0.02em;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-list {
-    display: flex;
-    gap: 14px;
-}
-.social-item-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    border: 1px solid rgba(17, 17, 17, 0.1);
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-social {
-    margin: 8px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 /** ---------------------------------------- */
 
@@ -165,7 +233,6 @@ a {
 .hero-section {
     padding-bottom: 80px;
 }
-
 .hero-container-wrap {
     background-image: linear-gradient(
             rgba(17, 17, 17, 0.4),
@@ -181,7 +248,6 @@ a {
     padding: 381px 40px 40px;
     align-items: baseline;
 }
-
 .p-hero {
     width: 484px;
     color: var(--white);
@@ -200,42 +266,12 @@ a {
     display: flex;
     gap: 14px;
 }
-.btn-hero {
-    border-radius: 100px;
-    background-color: transparent;
-    padding: 14px 40px;
-    border: 1px solid var(--white);
-    color: var(--white);
-    font-size: 14px;
-    font-weight: 600;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn-orange {
-    background-color: var(--accent-cl);
-    border: none;
-}
-.btn-hero:focus,
-.btn-hero:hover {
-    border-color: var(--accent-cl);
-    color: var(--accent-cl);
-}
-.btn-orange:focus,
-.btn-orange:hover {
-    background-color: var(--beige);
-    border: none;
-}
 .scroll-link {
     display: flex;
     align-items: center;
     gap: 14px;
 }
 .text-scroll {
-    color: var(--white);
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.29;
     letter-spacing: -0.03em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -243,7 +279,6 @@ a {
     border-radius: 50%;
     width: 38px;
     height: 38px;
-    flex-shrink: 0;
     background-color: var(--white);
     border: none;
     display: flex;
@@ -306,17 +341,11 @@ a {
     border: 1px solid rgba(255, 255, 255, 0.5);
     margin-bottom: 22px;
 }
-.header-three {
-    color: var(--white);
-    font-size: 18px;
-    font-weight: 600;
+.advantages-item .header-three {
     margin-bottom: 18px;
 }
-.p-advantages {
+.advantages-item .p-style {
     color: rgba(255, 255, 255, 0.7);
-    font-size: 14px;
-    line-height: 1.28;
-    letter-spacing: -0.02em;
 }
 
 /** ---------------------------------------- */
@@ -326,7 +355,7 @@ a {
 /** ---------------------------------------- */
 
 .components-section {
-    padding: 120px 0;
+    padding-top: 120px;
 }
 .components-list {
     display: flex;
@@ -339,18 +368,13 @@ a {
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    margin: 0;
 }
 .bg-orange {
     background-color: var(--accent-cl);
 }
 .bg-white {
     background-color: var(--white);
-    box-shadow: 0 0 0 1px var(--accent-cl);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.bg-white:hover,
-.bg-white:focus {
-    box-shadow: none;
 }
 .bg-violet {
     background-color: var(--violet);
@@ -361,12 +385,8 @@ a {
 .image-components {
     margin-bottom: 36px;
 }
-.components-item-description {
-    color: var(--white);
-    font-size: 14px;
+.components-item-wrap .p-style {
     font-weight: 600;
-    line-height: 1.28;
-    letter-spacing: -0.02em;
 }
 .overley-box {
     position: absolute;
@@ -390,11 +410,9 @@ a {
     letter-spacing: -0.03em;
     text-transform: uppercase;
 }
-
 .overley-list {
     display: flex;
     gap: 6px;
-    margin: 0;
     margin-bottom: 14px;
 }
 .overley-item {
@@ -413,16 +431,21 @@ a {
 .p-overley {
     overflow: hidden;
     color: var(--main-cl);
-    font-size: 14px;
-    line-height: 1.28;
-    letter-spacing: -0.02em;
     max-height: 162px;
 }
 .components-item:nth-child(even) .icon-arrow {
     stroke: var(--accent-cl);
 }
-.components-item:nth-child(even) .components-item-description {
+.components-item:nth-child(even) .p-style {
     color: var(--main-cl);
+}
+.components-item:nth-child(even) {
+    box-shadow: 0 0 0 1px var(--accent-cl);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.components-item:nth-child(even):hover,
+.components-item:nth-child(even):focus {
+    box-shadow: none;
 }
 .icon-arrow {
     position: absolute;
@@ -438,9 +461,6 @@ a {
 
 /** ---------------------------------------- */
 
-.how-made-section {
-    padding-bottom: 120px;
-}
 .how-made-wrap {
     display: flex;
     gap: 20px;
@@ -478,7 +498,6 @@ a {
     align-items: center;
     justify-content: center;
 }
-
 .show-video {
     display: block;
 }
@@ -487,7 +506,6 @@ iframe {
     width: 100%;
     border-radius: 15px;
 }
-
 .step-cooking-box {
     padding: 32px;
     background-color: var(--white);
@@ -505,9 +523,7 @@ iframe {
     gap: 24px;
     flex-direction: column;
 }
-
 .step-cooking-item {
-    font-size: 14px;
     line-height: 1.28;
     letter-spacing: -0.02%;
     position: relative;
@@ -531,9 +547,6 @@ iframe {
 
 /** ---------------------------------------- */
 
-.our-product-section {
-    padding-bottom: 120px;
-}
 .our-product-list {
     display: flex;
     flex-wrap: wrap;
@@ -557,7 +570,6 @@ iframe {
 }
 .h-our-product {
     font-size: 18px;
-    font-weight: 600;
     line-height: 1.34;
     letter-spacing: -0.02em;
     text-transform: uppercase;
@@ -572,8 +584,6 @@ iframe {
 }
 .btn-our-product {
     padding: 8px 20px;
-    font-size: 14px;
-    font-weight: 600;
     border-radius: 100px;
     border: 1px solid rgba(17, 17, 17, 0.1);
     background: var(--white-2);
@@ -585,9 +595,6 @@ iframe {
 
 /** ---------------------------------------- */
 
-.top-sellers-section {
-    padding-bottom: 120px;
-}
 .top-sellers-list {
     display: flex;
     gap: 16px;
@@ -634,11 +641,8 @@ iframe {
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.overley-top-sellers-text {
+.overley-top-sellers-box .p-style {
     color: var(--white-2);
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.02em;
 }
 .top-sellers-item:hover .overley-top-sellers-box {
     transform: translateZ(0);
@@ -650,9 +654,6 @@ iframe {
 
 /** ---------------------------------------- */
 
-.reviews-section {
-    padding-bottom: 120px;
-}
 .h-two-reviews {
     margin-bottom: 92px;
 }
@@ -686,16 +687,12 @@ iframe {
 .p-review {
     color: rgba(17, 17, 17, 0.7);
     text-align: center;
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.02em;
 }
 .btn-reviews {
     display: block;
     padding: 14px 40px;
     color: var(--main-cl);
     font-size: 18px;
-    font-weight: 600;
     border-radius: 100px;
     box-shadow: 0 0 0 1px var(--accent-cl);
     margin: 0 auto;
@@ -706,8 +703,8 @@ iframe {
 }
 .btn-reviews:hover,
 .btn-reviews:focus {
-    background-color: #fd9222;
-    color: white;
+    background-color: var(--accent-cl);
+    color: var(--white);
 }
 
 /** ---------------------------------------- */
@@ -739,59 +736,27 @@ iframe {
     display: flex;
     gap: 50px;
 }
-.p-footer {
-    color: #fff;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.29;
-    margin-bottom: 14px;
+.footer-top-item {
+    display: flex;
+    gap: 14px;
+    flex-direction: column;
 }
 .social-list {
     display: flex;
     gap: 14px;
 }
-.footer .social-item-link {
-    border: 1px solid rgba(255, 255, 255, 0.1);
-}
-.footer .icon-social {
-    fill: var(--white);
-}
-
 .contact-list {
     display: flex;
     gap: 4px;
     flex-direction: column;
 }
 .contact-item-link {
-    color: var(--white);
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.02em;
     font-style: normal;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-bottom {
     padding: 24px 0 0 0;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
-}
-.footer-bottom .menu-item-link {
-    padding: 18px 0;
-    color: var(--white);
-}
-.menu-item-link:hover,
-.menu-item-link:focus,
-.contact-item-link:hover,
-.contact-item-link:focus {
-    color: var(--accent-cl);
-}
-
-.social-item-link:hover,
-.social-item-link:focus {
-    border: 1px solid rgba(253, 146, 34, 0.1);
-}
-.social-item-link:hover .icon-social,
-.social-item-link:focus .icon-social {
-    fill: var(--accent-cl);
 }
 .form {
     display: flex;
