--- a/css/style.css
+++ b/css/style.css
@@ -1144,12 +1144,7 @@ iframe {
         max-width: 336px;
     }
     .overley-top-sellers-box {
-        background: linear-gradient(
-            161deg,
-            rgba(253, 253, 255, 0.1) 0%,
-            rgba(8, 2, 21, 0) 100%
-        );
-        backdrop-filter: blur(7.5px);
+        background-color: rgba(253, 253, 255, 0.1);
     }
     .h-two-reviews {
         margin-bottom: 74px;
